--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -131,7 +132,7 @@
 
         <section id="hero" class="text-center pt-8 pb-20">
             <div class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-4 border-amber-500 shadow-xl hero-pulse">
-                <img src="https://placehold.co/400x400/161b22/f59e0b?text=MA" 
+                <img src="images/manoj.pic.jpg" 
                      alt="MANOJKUMAR.A Profile" 
                      class="w-full h-full object-cover">
             </div>
@@ -183,63 +184,63 @@
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="terminal" class="w-10 h-10 mx-auto mb-3 text-yellow-400"></i>
                         <p class="text-base font-bold text-white">Python</p>
-                        <p class="text-xs text-gray-500">Intermediate</p>
+                        <p class="text-xs text-gray-500">Intermediate jsut learnt somewhat with swetha mam and akill rack</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="coffee" class="w-10 h-10 mx-auto mb-3 text-red-500"></i>
                         <p class="text-base font-bold text-white">Java</p>
-                        <p class="text-xs text-gray-500">Basics</p>
+                        <p class="text-xs text-gray-500">just studied what taught in college🤷‍♂️</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="code" class="w-10 h-10 mx-auto mb-3 text-blue-500"></i>
                         <p class="text-base font-bold text-white">C</p>
-                        <p class="text-xs text-gray-500">Intermediate</p>
+                        <p class="text-xs text-gray-500">Intermediate, but it is not important to me😅</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="cpu" class="w-10 h-10 mx-auto mb-3 text-indigo-500"></i>
                         <p class="text-base font-bold text-white">C++</p>
-                        <p class="text-xs text-gray-500">Basics</p>
+                        <p class="text-xs text-gray-500">Basics learn with tamilselvi mam</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="file-code" class="w-10 h-10 mx-auto mb-3 text-orange-500"></i>
                         <p class="text-base font-bold text-white">HTML</p>
-                        <p class="text-xs text-gray-500">Structure</p>
+                        <p class="text-xs text-gray-500">Structure just learnt some basic tags</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="palette" class="w-10 h-10 mx-auto mb-3 text-blue-400"></i>
                         <p class="text-base font-bold text-white">CSS</p>
-                        <p class="text-xs text-gray-500">Styling</p>
+                        <p class="text-xs text-gray-500">learnt some basics for Styling my own html</p>
                     </div>
 
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="terminal" class="w-10 h-10 mx-auto mb-3 text-yellow-400"></i>
                         <p class="text-base font-bold text-white">Python</p>
-                        <p class="text-xs text-gray-500">Intermediate</p>
+                        <p class="text-xs text-gray-500">Intermediate jsut learnt somewhat with swetha mam and akill rack</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="coffee" class="w-10 h-10 mx-auto mb-3 text-red-500"></i>
                         <p class="text-base font-bold text-white">Java</p>
-                        <p class="text-xs text-gray-500">Basics</p>
+                        <p class="text-xs text-gray-500">just studied what taught in college🤷‍♂️</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="code" class="w-10 h-10 mx-auto mb-3 text-blue-500"></i>
                         <p class="text-base font-bold text-white">C</p>
-                        <p class="text-xs text-gray-500">Intermediate</p>
+                        <p class="text-xs text-gray-500">Intermediate, but it is not important to me😅</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="cpu" class="w-10 h-10 mx-auto mb-3 text-indigo-500"></i>
                         <p class="text-base font-bold text-white">C++</p>
-                        <p class="text-xs text-gray-500">Basics</p>
+                        <p class="text-xs text-gray-500">Basics learn with tamilselvi mam</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="file-code" class="w-10 h-10 mx-auto mb-3 text-orange-500"></i>
                         <p class="text-base font-bold text-white">HTML</p>
-                        <p class="text-xs text-gray-500">Structure</p>
+                        <p class="text-xs text-gray-500">Structure just learnt some basic tags</p>
                     </div>
                     <div class="card p-6 text-center skill-card hover:bg-[#1f2937]">
                         <i data-lucide="palette" class="w-10 h-10 mx-auto mb-3 text-blue-400"></i>
                         <p class="text-base font-bold text-white">CSS</p>
-                        <p class="text-xs text-gray-500">Styling</p>
+                        <p class="text-xs text-gray-500">learnt some basics for Styling my own html</p>
                     </div>
 
                 </div>
@@ -247,34 +248,29 @@
         </section>
 
         <section id="projects" class="py-12 border-t border-gray-800">
-            <h2 class="text-3xl font-bold text-white section-header">Core Programming</h2>
+            <h2 class="text-3xl font-bold text-white section-header">🥸Core Programming</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="card p-6">
                     <h3 class="text-xl font-semibold mb-2 text-amber-500 flex items-center">
-                        <i data-lucide="git-branch" class="w-5 h-5 mr-2"></i> DSA Implementations
+                        <i data-lucide="git-branch" class="w-5 h-5 mr-2"></i> Data  Structures and Algorithms
                     </h3>
                     <div class="mb-3">
-                        <span class="text-xs bg-gray-700 text-gray-300 px-2 py-1 rounded">C++</span>
-                        <span class="text-xs bg-gray-700 text-gray-300 px-2 py-1 rounded">C</span>
                     </div>
                     <p class="text-gray-400 mb-4 text-sm">
-                        Implementation of foundational algorithms such as Sorting (Bubble, Merge) and Searching (Binary, Linear). 
-                        Focus on time complexity analysis and optimization.
+                        <b>just going to learn it before 2026 ending 🥸. its my challenge to me😑.yarukkunah idea💡
+                             irundha sollunga pahh edhula prepare pannalmnu idea kudunga pahh😅</b>
                     </p>
-                    <a href="https://github.com/amanojkumar07" target="_blank" class="text-sm font-medium text-white hover:text-amber-500 flex items-center">
-                        View on GitHub <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i>
-                    </a>
                 </div>
                 <div class="card p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-amber-500 flex items-center">
-                        <i data-lucide="folder-code" class="w-5 h-5 mr-2"></i> Python Scripts
+                    <h3 class="text-xl font-semibold mb-2 text-amber-500 flex items-center"><br>
+                        <i data-lucide="folder-code" class="w-5 h-5 mr-2"></i> small html and prompt projects
                     </h3>
                     <div class="mb-3">
-                        <span class="text-xs bg-gray-700 text-gray-300 px-2 py-1 rounded">Python 3</span>
+                        <span class="text-xs bg-gray-700 text-gray-300 px-2 py-1 rounded"><b>HTML</b></span>
+                         <span class="text-xs bg-gray-700 text-gray-300 px-2 py-1 rounded"><b>CSS</b></span>
                     </div>
                     <p class="text-gray-400 mb-4 text-sm">
-                        A collection of scripts demonstrating syntax, data types, file operations, 
-                        and basic automation tasks relevant to Data Science.
+                        <b>A collection of basics 1st html projects and small games built by only prompt by me.</b>
                     </p>
                     <a href="https://github.com/amanojkumar07" target="_blank" class="text-sm font-medium text-white hover:text-amber-500 flex items-center">
                         View on GitHub <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i>
@@ -284,24 +280,24 @@
         </section>
 
         <section id="achievements" class="py-12 border-t border-gray-800">
-            <h2 class="text-3xl font-bold text-white section-header">Competitive Programming</h2>
+            <h2 class="text-3xl font-bold text-white section-header">Competitive Programming💪</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                 <div class="card p-5 text-center">
                     <i data-lucide="flame" class="w-8 h-8 mx-auto mb-2 text-orange-500"></i>
                     <p class="font-semibold text-white">CodeChef Streak</p>
-                    <p class="text-2xl font-extrabold text-amber-500">101+</p>
+                    <p class="text-2xl font-extrabold text-amber-500">110+🔥 but now i broke it already</p>
                     <p class="text-xs text-gray-500 mt-1">Consecutive Days</p>
                 </div>
                 <div class="card p-5 text-center">
                     <i data-lucide="swords" class="w-8 h-8 mx-auto mb-2 text-green-500"></i>
                     <p class="font-semibold text-white">Contests</p>
-                    <p class="text-2xl font-extrabold text-amber-500">9</p>
+                    <p class="text-2xl font-extrabold text-amber-500">10+</p>
                     <p class="text-xs text-gray-500 mt-1">Participated</p>
                 </div>
                 <div class="card p-5 text-center">
                     <i data-lucide="globe" class="w-8 h-8 mx-auto mb-2 text-blue-500"></i>
                     <p class="font-semibold text-white">Global Rank</p>
-                    <p class="text-2xl font-extrabold text-amber-500">1349</p>
+                    <p class="text-2xl font-extrabold text-amber-500">1349 while active😍 but now 106636😭</p>
                     <p class="text-xs text-gray-500 mt-1">CodeChef Division</p>
                 </div>
                 <div class="card p-5 text-center">
